@@ -1,30 +1,14 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.4cvs on Fri Oct 14 12:23:07 2005 -->
+<!-- generated by wxGlade 0.3.2 on Sat Oct 15 11:18:59 2005 -->
 
-<application path="" name="" class="" option="0" language="python" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="1" for_version="2.6">
+<application path="" name="" class="" option="0" language="python" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="1">
     <object class="wxDialog" name="CheckHardware" base="EditDialog">
-        <title>Check Hardware</title>
+        <style>wxDEFAULT_DIALOG_STYLE</style>
+        <title>Checking openMSX configurations</title>
         <centered>1</centered>
         <size>442, 340</size>
         <object class="wxBoxSizer" name="CheckHardwareSizer" base="EditBoxSizer">
             <orient>wxVERTICAL</orient>
-            <object class="sizeritem">
-                <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
-                <border>5</border>
-                <option>0</option>
-                <object class="wxBoxSizer" name="TitleSizer" base="EditBoxSizer">
-                    <orient>wxHORIZONTAL</orient>
-                    <object class="sizeritem">
-                        <flag>wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
-                        <border>0</border>
-                        <option>1</option>
-                        <object class="wxStaticText" name="TitleText" base="EditStaticText">
-                            <attribute>1</attribute>
-                            <label>Checking which openMSX machines and extensions\nare correctly configured</label>
-                        </object>
-                    </object>
-                </object>
-            </object>
             <object class="sizeritem">
                 <flag>wxALL|wxEXPAND</flag>
                 <border>5</border>
@@ -181,13 +165,13 @@
                 </object>
             </object>
             <object class="sizeritem">
-                <flag>wxALL</flag>
+                <flag>wxALL|wxEXPAND</flag>
                 <border>5</border>
                 <option>0</option>
                 <object class="wxTextCtrl" name="MissingObjects" base="EditTextCtrl">
                     <style>wxTE_MULTILINE|wxTE_READONLY</style>
                     <value>Problems:\n</value>
-                    <size>320, 100</size>
+                    <size>426, 100</size>
                 </object>
             </object>
             <object class="sizeritem">
